I added environment variables. It works with dev and prod mode.

--- a/src/EnglishAssistantTelegramBot.Console/EnglishAssistantTelegramBot.Console.csproj
+++ b/src/EnglishAssistantTelegramBot.Console/EnglishAssistantTelegramBot.Console.csproj
@@ -19,7 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Configuration\appsettings.json">
+    <None Update="Configuration\appsettings.production.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configuration\appsettings.development.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
